--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p id="text"></p>
     </div>
 
-    <button id="restyle-button">restyle</button>
+    <button id="restyle-button">Restyle</button>
 
     <script src="script.js"></script>
   </body>
